--- a/Exam.ipynb
+++ b/Exam.ipynb
@@ -7,24 +7,16 @@
    "source": [
     "# LEVEL 1\n",
     "\n",
-    "Course: B (Hons) Computing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0ef96a2c",
-   "metadata": {},
-   "source": [
-    "Student id: c7683898"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "78a6588a",
-   "metadata": {},
-   "source": [
+    "Course: B (Hons) Computing\n",
+    "Student id: c7683898\n",
     "**\"I am submitting Exam Paper 2.\"**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dd541fe",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
