--- a/Exam.ipynb
+++ b/Exam.ipynb
@@ -8,14 +8,47 @@
     "# LEVEL 1\n",
     "\n",
     "Course: B (Hons) Computing\n",
+    "\n",
+    "\n",
     "Student id: c7683898\n",
+    "\n",
+    "\n",
     "**\"I am submitting Exam Paper 2.\"**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0dd541fe",
+   "id": "b8c3d627",
    "metadata": {},
+   "source": [
+    "# Best way in programming:\n",
+    "\n",
+    "I think the best way to do programming is mainly to write code in a pc or laptop other than writing the code in a piece of paper or our notebook.\n",
+    "\n",
+    "## Preferred tools\n",
+    "\n",
+    "I would mostly prefer tools or app like Virtual Studuio Code or python IDLE for coding i would mostly prefer VS code more than any other app because it is the most user friendly app which helps us to code easily. I would prefer AI\n",
+    "like *chatgpt, gemini or other useful AI tools* which helps user to get some freference on how to code and also help the coders to check wheather their code are wrong and how can they improve coding skills and where are they making an mistake.\n",
+    "\n",
+    "###  Physical environment\n",
+    "\n",
+    "The most prefered Environment is a quite place where you can mainly focous on just coding and how tro improve your code. I think the best way for a mind to process thing are mostly in a quiet place like a **Library**, **Computer labs** and some quiet place."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b7c9641",
+   "metadata": {},
+   "source": [
+    "# Task 3:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc0f607d",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
