--- a/Exam.ipynb
+++ b/Exam.ipynb
@@ -34,11 +34,60 @@
     "\n",
     "The most prefered Environment is a quite place where you can mainly focous on just coding and how tro improve your code. I think the best way for a mind to process thing are mostly in a quiet place like a **Library**, **Computer labs** and some quiet place."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9cb51db",
+   "metadata": {},
+   "source": [
+    "# Task 3:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "151407e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pass\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In a Code block in your Notebook, write code that prompts the user to enter an integer, which represents a\n",
+    "# mark on an exam. The program should display whether the mark is a pass, where the mark needed to pass is\n",
+    "# 40 or more. Assume the \"Happy Path\", so that the user will always enter an integer.\n",
+    "\n",
+    "mark = int(input(\"Enter your exam mark: \"))\n",
+    "\n",
+    "if mark >= 40:\n",
+    "    print(\"Pass\")\n",
+    "else:\n",
+    "    print(\"Fail\")\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
