--- a/Exam.ipynb
+++ b/Exam.ipynb
@@ -69,6 +69,47 @@
     "else:\n",
     "    print(\"Fail\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "072ddcda",
+   "metadata": {},
+   "source": [
+    "# Task 4:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "eaac51aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In a new Code block, write a function that takes as its parameter a list of strings. The function should return\n",
+    "# True if one of the strings is coconut (in lower case, as shown), or False otherwise. Include some code\n",
+    "# outside the function that shows that the function works correctly. Again, you may assume the \"Happy Path\",\n",
+    "# so the list will always contain just strings.\n",
+    "\n",
+    "def coconut(words):\n",
+    "    return \"coconut\" in words\n",
+    "\n",
+    "\n",
+    "# Code to show the function works\n",
+    "fruits1 = [\"apple\", \"banana\", \"coconut\", \"orange\"]\n",
+    "fruits2 = [\"apple\", \"banana\", \"orange\"]\n",
+    "\n",
+    "print(coconut(fruits1))  # Expected: True\n",
+    "print(coconut(fruits2))  # Expected: False\n"
+   ]
   }
  ],
  "metadata": {
