--- a/Exam.ipynb
+++ b/Exam.ipynb
@@ -110,6 +110,52 @@
     "print(coconut(fruits1))  # Expected: True\n",
     "print(coconut(fruits2))  # Expected: False\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "494dabe9",
+   "metadata": {},
+   "source": [
+    "# Task 5:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0bdaa196",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strings in alphabetical order:\n",
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In a last new Code block, write a program that prompts the user to enter strings, one at a time. The input\n",
+    "# ends when the user just presses \"Enter\" (so the string entered is empty). Then the program should display\n",
+    "# the strings, in lower case, in alphabetical order.\n",
+    "\n",
+    "strings = []\n",
+    "\n",
+    "while True:\n",
+    "    user_input = input(\"Enter a string (press Enter to finish): \")\n",
+    "    if user_input == \"\":\n",
+    "        break\n",
+    "    strings.append(user_input)\n",
+    "\n",
+    "# Convert to lower case and sort alphabetically\n",
+    "strings = [s.lower() for s in strings]\n",
+    "strings.sort()\n",
+    "\n",
+    "# Display the result\n",
+    "print(\"Strings in alphabetical order:\")\n",
+    "for s in strings:\n",
+    "    print(s)\n"
+   ]
   }
  ],
  "metadata": {
